on-prem-dc.tf

resource "aws_vpc" "on-premise-dc" {
  cidr_block = "172.21.0.0/16"
  tags = {
    Name = "On-premise-dc"
    Env  = "lab"
  }
}

resource "aws_security_group" "on-premise-dc" {
  name        = "on-premise-edge-router"
  description = "On premise edge router"
  vpc_id      = aws_vpc.on-premise-dc.id

  ingress {
    description      = "Allow SSH from everywhere"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
  ingress {
    description      = "Allow ICMP from within VPC"
    from_port        = -1
    to_port          = -1
    protocol         = "icmp"
    cidr_blocks      = [aws_vpc.on-premise-dc.cidr_block]
    ipv6_cidr_blocks = [aws_vpc.on-premise-dc.ipv6_cidr_block]
  }

  egress {
      description      = "Authorize Internet access"
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "On-premise-dc"
  }
}
# we get ubuntu ami
data "aws_ami" "ubuntu" {
  most_recent = true

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-focal-20.04-amd64-server-*"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }

  owners = ["099720109477"] # Canonical
}

resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.on-premise-dc.id

  tags = {
    Name = "on-premise-igw"
    Env  = "lab"
  }
}

resource "aws_subnet" "on-prem-public-subnet" {
  vpc_id            = aws_vpc.on-premise-dc.id
  cidr_block        = "172.21.0.0/24"
  availability_zone = "eu-west-3a"

  tags = {
    Name = "on-prem-public-subnet"
  }
}

resource "aws_instance" "open-swan" {
  ami                         = data.aws_ami.ubuntu.id
  instance_type               = "t2.micro"
  associate_public_ip_address = true
  availability_zone           = "eu-west-3a"
  security_groups             = [aws_security_group.on-premise-dc.id]
  source_dest_check           = false
  subnet_id                   = aws_subnet.on-prem-public-subnet.id

  tags = {
    Name = "open-swan"
    Env  = "lab"
  }
}

output "public-ip" {
  value = aws_instance.open-swan.public_ip
}
